force-app/main/default/objects/CTS_Time_Tracking__c/CTS_Time_Tracking__c.object-meta.xml
<CustomObject>
    <description>Used to track time on cases for the Support Organization.</description>
    <label>CTS Time Tracking</label>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>CTS Time Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTS Time Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>