force-app/main/default/objects/CTS_Time_Tracking__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CTS Time Tracking</relationshipLabel>
    <relationshipName>CTS_Time_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>