force-app/main/default/objects/CTS_Time_Tracking__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Handling</fullName>
            </value>
            <value>
                <fullName>Lab Setup</fullName>
            </value>
            <value>
                <fullName>Reproduction of Issue</fullName>
            </value>
            <value>
                <fullName>CDA Validation</fullName>
            </value>
            <value>
                <fullName>TITAN Testing</fullName>
            </value>
            <value>
                <fullName>OS Testing</fullName>
            </value>
            <value>
                <fullName>Application Testing</fullName>
            </value>
            <value>
                <fullName>CDA Patch Testing</fullName>
            </value>
            <value>
                <fullName>Application Patch Testing</fullName>
            </value>
            <value>
                <fullName>TITAN Patch Testing</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Customer Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>