force-app/main/default/objects/CTS_Time_Tracking__c/fields/Time_this_Effort_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_this_Effort_in_minutes__c</fullName>
    <description>Time of this effort in minutes</description>
    <label>Time this Effort (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>